Fix navbar layout on Firefox for Android (#598)

--- a/assets/css/template/_navbar.scss
+++ b/assets/css/template/_navbar.scss
@@ -123,3 +123,8 @@
 .navbar-toggle {
   margin-top: 20px;
 }
+
+.navbar-brand {
+  max-width: 120px;
+  height: auto;
+}
